<resources>
    <string name="app_name" translatable="false">lokos por la música</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="register_txt">Register</string>
    <string name="reset_password_txt">Reset password</string>
    <string name="reset_txt">Reset</string>
    <string name="community_txt">Community</string>
    <string name="hi_user_txt">Hi,&#160;</string>
    <string name="favourites_txt">Favourites</string>
    <string name="favourite_songs_txt">Favourite songs</string>
    <string name="all_songs_txt">All songs</string>
    <string name="error">Error</string>
    <string name="username_txt">Username</string>
    <string name="first_name_txt">First name</string>
    <string name="last_names_txt">Last names</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="confirm_password_txt">Confirm password</string>
    <string name="old_password_txt">Old password</string>
    <string name="new_password_txt">New password</string>
    <string name="confirm_new_password_txt">Confirm new password</string>
    <string name="remember_me_txt">Remember me?</string>
    <string name="error_communication">error_communication</string>
    <string name="empty_form_field">This field cannot be empty</string>
    <string name="short_form_filed">This filed must have at least</string>
    <string name="character">characters</string>
    <string name="email_required_form_field">This field should be a valid email</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="user_already_exists">This user already exists</string>
    <string name="request_error">Something went wrong</string>
    <string name="user_created">User created</string>
    <string name="user_doesnt_exist">There is not any account created with those credentials</string>
    <string name="welcome">Welcome</string>
    <string name="play">Play</string>
    <string name="password_changed">Password changed</string>
    <string name="song_exists">This song already exists</string>
    <string name="song_doesnt_exists">Song doesnt exist</string>
    <string name="song_already_favourite">This song is already a favourite of yours</string>
    <string name="song_favourites">Song added to your favourites</string>
    <string name="song_deleted_favourites">Song deleted from your favourites</string>
    <string name="input_wrong">The given input is not valid</string>
    <string name="user_not_exist">This user doesnt exist</string>
    <string name="password_incorrect">The password is incorrect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="es_lang_button" translatable="false">Español</string>
    <string name="en_lang_button" translatable="false">English</string>
</resources>