<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/hiToolbar"
        android:layout_width="413dp"
        android:layout_height="54dp"
        android:background="?attr/colorPrimaryVariant"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesToolbar"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/hi_user_txt"
        app:titleTextColor="#000000" />

    <SearchView
        android:id="@+id/favouritesSearchView"
        android:layout_width="413dp"
        android:layout_height="38dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hiToolbar"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/favouritesToolbar"
        android:layout_width="413dp"
        android:layout_height="54dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/favouritesTitle"
        android:layout_width="201dp"
        android:layout_height="42dp"
        android:text="@string/favourites_txt"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/favouritesToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/favouritesListView"
        android:layout_width="411dp"
        android:layout_height="482dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesSearchView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/allSongsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/all_songs_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesListView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/hamburguesaFavourites"
        android:layout_width="49dp"
        android:layout_height="54dp"
        android:background="?attr/colorPrimaryVariant"
        android:contentDescription="@android:string/untitled"
        app:layout_constraintBottom_toBottomOf="@+id/hiToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/hiToolbar"
        app:layout_constraintTop_toBottomOf="@+id/favouritesTitle"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/hamburguesa2" />

</androidx.constraintlayout.widget.ConstraintLayout>